2. Node APP/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejsping
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nodejsping
